--- a/index.html
+++ b/index.html
@@ -4,19 +4,61 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
     <header id="top">
       <h1>Prework Study Guide</h1>
-      <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
+      <img
+        src="./assets/bowtie-cat.png"
+        alt="Profile image of cat wearing a bow tie."
+      />
+      <h2>✨ Open the Console to See What's Happening ✨</h2>
     </header>
     <main>
-      <!-- Student code goes here -->
+      <section class="card" id="html-section">
+        <h2>HTML</h2>
+        <ul>
+          <li>The head element contains information about the webpage.</li>
+          <li>The body element represents the visible content shown to the user.</li>
+        </ul>
+      </section>
+   
+      <<section class="card" id="css-section">
+        <h2>CSS</h2>
+        <ul>
+          <li>A margin indicates how much space we want around the outside of an element.</li>
+  <li>A padding indicates how much space we want around the content inside an element.</li>
+        </ul>
+      </section>
+   
+      <section class="card" id="git-section">
+        <h2>Git</h2>
+        <li>git status: checks what branch we are currently on</li>
+    <li>git checkout -b 'branch-name': creates a new branch and switches to it</li>
+    <li>git add -A : make sure you are on the feature branch then use this to stage your changes</li>
+    <li>git commit -m "put message here": commits the changes to the repository</li>
+    <li>git pull origin main: use this code to pull in the main branch</li>
+    <li>git push origin feature ;  use this plus the correct branch name to push changes to github</li>
+    <li> to then update our local main branch use use git checkout main to return to the main branch and then git pull origin main to pull the remote main branch into the local main branch<li>
+
+  <li></li>
+      </section>
+   
+      <section class="card" id="javascript-section">
+        <h2>JavaScript</h2>
+        <ul>
+          <li>Note that whereas the style.css file is linked within the head element, the script.js file is linked within the body element.</li>
+            <li>A variable is a named container that allows us to store data in our code.</li>
+            <li>Control flow is the order in which a computer executes code in a script.</li>
+          </ul>
+      </section>
     </main>
 
     <footer>
       <p>I can code!</p>
     </footer>
+    <script src="./assets/script.js"></script>
   </body>
 </html>
